# aimops

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_artifacts.py  routes_convert.py  routes_images.py  routes_masks.py  routes_metadata.py  routes_models.py  routes_operations.py
backend/app/core/: config.py  database.py  storage.py
backend/app/registry/: models.yaml
backend/app/schemas/: artifact.py  classification.py  convert.py  image.py  mask.py  metadata.py
backend/app/services/: artifact_service.py  convert_service.py  mask_service.py  metadata_service.py  model_service.py
backend/tests/: test_upload_flow.py
frontend/: index.html  package.json  tsconfig.json
frontend/src/: styles.css
frontend/src/api/: client.ts  convert.ts  images.ts  mask.ts  metadata.ts  models.ts  operations.ts
frontend/src/pages/: App.tsx
frontend/src/types/: index.ts
